[gd_scene load_steps=7 format=2]

[ext_resource path="res://ui/Shop.gd" type="Script" id=1]
[ext_resource path="res://ui/ShopCardSlot.tscn" type="PackedScene" id=2]
[ext_resource path="res://Relic.tscn" type="PackedScene" id=3]
[ext_resource path="res://Potion.tscn" type="PackedScene" id=4]
[ext_resource path="res://image/purge.png" type="Texture" id=5]
[ext_resource path="res://image/rug.png" type="Texture" id=6]

[node name="Shop" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="BG" type="TextureRect" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = -93.3638
margin_top = -17.4614
margin_right = 109.636
margin_bottom = 12.5386
texture = ExtResource( 6 )
expand = true
stretch_mode = 6
__meta__ = {
"_edit_use_anchors_": false
}

[node name="CardList" type="GridContainer" parent="."]
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
margin_left = 101.0
margin_top = -215.0
margin_right = -58.0
margin_bottom = 261.0
columns = 5
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ShopCardSlot" parent="CardList" instance=ExtResource( 2 )]
anchor_right = 0.0
anchor_bottom = 0.0
margin_right = 169.0
margin_bottom = 236.0

[node name="ShopCardSlot2" parent="CardList" instance=ExtResource( 2 )]
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 173.0
margin_right = 342.0
margin_bottom = 236.0

[node name="ShopCardSlot3" parent="CardList" instance=ExtResource( 2 )]
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 346.0
margin_right = 515.0
margin_bottom = 236.0

[node name="ShopCardSlot4" parent="CardList" instance=ExtResource( 2 )]
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 519.0
margin_right = 688.0
margin_bottom = 236.0

[node name="ShopCardSlot5" parent="CardList" instance=ExtResource( 2 )]
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 692.0
margin_right = 861.0
margin_bottom = 236.0

[node name="ShopCardSlot6" parent="CardList" instance=ExtResource( 2 )]
anchor_right = 0.0
anchor_bottom = 0.0
margin_top = 240.0
margin_right = 169.0
margin_bottom = 476.0

[node name="ShopCardSlot7" parent="CardList" instance=ExtResource( 2 )]
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 173.0
margin_top = 240.0
margin_right = 342.0
margin_bottom = 476.0

[node name="VBoxContainer" type="VBoxContainer" parent="."]
anchor_left = 0.453584
anchor_top = 0.590681
anchor_right = 0.762177
anchor_bottom = 0.887348
__meta__ = {
"_edit_use_anchors_": true
}

[node name="RelicList" type="HBoxContainer" parent="VBoxContainer"]
margin_right = 315.0
margin_bottom = 64.0
alignment = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Relic" parent="VBoxContainer/RelicList" instance=ExtResource( 3 )]
margin_right = 102.0

[node name="Relic2" parent="VBoxContainer/RelicList" instance=ExtResource( 3 )]
margin_left = 106.0
margin_right = 208.0

[node name="Relic3" parent="VBoxContainer/RelicList" instance=ExtResource( 3 )]
margin_left = 212.0
margin_right = 315.0

[node name="PotionList" type="HBoxContainer" parent="VBoxContainer"]
margin_top = 68.0
margin_right = 315.0
margin_bottom = 132.0
alignment = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Potion" parent="VBoxContainer/PotionList" instance=ExtResource( 4 )]
margin_right = 102.0

[node name="Potion2" parent="VBoxContainer/PotionList" instance=ExtResource( 4 )]
margin_left = 106.0
margin_right = 208.0

[node name="Potion3" parent="VBoxContainer/PotionList" instance=ExtResource( 4 )]
margin_left = 212.0
margin_right = 315.0

[node name="RemoveCard" type="TextureButton" parent="."]
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = -270.209
margin_top = -258.525
margin_right = -49.2094
margin_bottom = -9.52435
texture_normal = ExtResource( 5 )
expand = true
stretch_mode = 5
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Leave" type="Button" parent="."]
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = -458.755
margin_top = -70.2834
margin_right = -367.755
margin_bottom = -35.2834
text = "X"
__meta__ = {
"_edit_use_anchors_": false
}
[connection signal="pressed" from="RemoveCard" to="." method="_on_RemoveCard_pressed"]
[connection signal="pressed" from="Leave" to="." method="_on_Leave_pressed"]
